<resources>
    <!-- firebaseUI authentication flow -->
    <string name="signed_out">Signed Out</string>

    <!-- facebook login (these constants are used in the manifest) -->
    <string name="facebook_application_id" translatable="false">345736037682696</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb345736037682696</string>

    <string name="app_name">ShopMob</string>
    <string name="app_name_planning">Shop for: %1$s</string>
    <string name="app_name_admin_groups_in_list">Groups of List: %1$s</string>
    <string name="app_name_admin_group_members">Group: %1$s</string>
    <string name="app_name_planning_shop">ShopMob: %1$s</string>
    <string name="app_name_admin">ShopMob Administration</string>
    <string name="app_name_admin_profile">ShopMob User Profile</string>
    <string name="app_name_admin_groups">ShopMob Groups</string>
    <string name="app_name_admin_lists">ShopMob Lists</string>
    <string name="admin">Administration</string>
    <string name="app_name_details_product">ShopMob Product Details</string>
    <string name="app_name_details_shop">ShopMob Shop Details</string>
    <string name="app_name_shopping_zones">ShopMob Shop Floorplan</string>
    <string name="shop_list">Stores</string>
    <string name="shopping_sections">Shop Sections</string>
    <string name="icon_shopping_cart">Shopping Cart</string>
    <string name="shopping">Shopping at the supermarket</string>
    <string name="no_data">No Data</string>
    <string name="no_group_1">You currently have not been added to any ShopMob groups. Please join an open group or start a new group of your own - then add a SmobList to be shared.</string>
    <string name="no_group_2">Alternatively, ask someone to invite you to an existing group. Shared SmobLists are only visible to members of the sharing group.</string>
    <string name="contact_phone_number">Contact phone number</string>

    <string name="smob_item_name">ShopMob Item</string>
    <string name="smob_item_desc">ShopMob Item Description (optional)</string>
    <string name="smob_item_mainCat">ShopMob Item Main Category (e.g. FOODS)</string>
    <string name="smob_item_subCat">ShopMob Item Sub Category (e.g. DAIRY)</string>
    <string name="smob_item_saved">ShopMob Item Saved!</string>

    <string name="smob_lists_name">ShopMob Shopping Lists</string>

    <string name="smob_shop_name">ShopMob Shop Name</string>
    <string name="smob_shop_desc">ShopMob Shop Description</string>
    <string name="smob_shop_prompt">Select Shop</string>
    <string name="smob_shop_locate">Locate Shop</string>
    <string name="smob_shop_saved">ShopMob Shop Saved!</string>

    <string name="smob_list_name">ShopMob Shopping List Name</string>
    <string name="smob_list_desc">ShopMob Shopping List Description</string>
    <string name="smob_list_saved">ShopMob Shop List Saved!</string>
    <string name="smob_list_completion">%1$.0f %%</string>

    <string name="smob_group_name">ShopMob Group Name</string>
    <string name="smob_group_desc">ShopMob Group Description</string>
    <string name="smob_group_saved">ShopMob Group Saved!</string>
    <string name="smob_group_type">ShopMob Group Type (e.g. FAMILY)</string>

    <string name="smob_group_member_username">ShopMob Group Member Username</string>
    <string name="smob_group_member_name">ShopMob Group Member Name</string>
    <string name="smob_group_member_saved">ShopMob Group Member Added!</string>

    <string name="logout">Logout</string>
    <string name="launch">Launch</string>
    <string name="welcome_message">Welcome to\nShopMob</string>
    <string name="welcome_user">Welcome to\nShopMob, %1s</string>
    <string name="login">Login</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="location_name">this location</string>
    <string name="full_location_permission_explanation">Full (permanent) location access needed to use geoFences.</string>
    <string name="full_location_permission_denied_consequence">No geoFences will be set. You can change this in settings.</string>
    <string name="fine_location_permission_denied_consequence">Map cannot show your location without access to it.</string>
    <string name="access_contacts_permission_denied_consequence">Access to contacts would help you in defining ShopMob groups.</string>
    <string name="location_access_explanation">ShopMob needs location to be enabled (geoFences). Activate in settings.</string>
    <string name="anonymous_place">A nice, anonymous place</string>
    <string name="settings">Settings</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_enter_group_name">Please enter group name</string>
    <string name="err_enter_list_name">Please enter list name</string>
    <string name="err_select_location">Please select location</string>

    <string name="err_enter_name">Please enter product name</string>
    <string name="err_enter_catMain">Please enter product main category (e.g. FOODS)</string>
    <string name="err_enter_catSub">Please enter product sub category (e.g. DAIRY)</string>
    <string name="err_select_shop">Please select shop category (e.g. SUPERMARKET)</string>

    <string name="notification_permission_explanation">Allow notifications to enable battery preserving content updates</string>


    <!-- Smob UI strings -->
    <string name="smob_icon">ShopMob icon</string>
    <string name="add_smob_item">Add ShopMob item</string>
    <string name="add_smob_shop">Add ShopMob shop</string>
    <string name="add_smob_group">Add ShopMob group</string>
    <string name="add_smob_group_member">Add ShopMob group member</string>
    <string name="import_device_contacts">Import contacts from device</string>
    <string name="add_smob_list_member">Add ShopMob list member</string>
    <string name="save_smob_item">Save ShopMob item</string>
    <string name="save_smob_shop">Save ShopMob shop</string>
    <string name="save_smob_group">Save ShopMob group</string>
    <string name="save_smob_list">Save ShopMob list</string>

    <!-- Smob fcm channel ID -->
    <string name="smob_update_notification_channel_id">smob_update_notification_channel_id</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
    <!-- buttons -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="smob_product_details">ShopMob Product Details</string>
    <string name="smob_group_member_details">ShopMob Member Details</string>
    <string name="smob_list_group_details">ShopMob List - Group Details</string>

    <string name="smob_shop_details">ShopMob Store Details</string>
    <string name="map">map</string>
    <string name="undo_delete">Undo "Delete"?</string>
    <string name="undo_purchase">Undo "Purchased"?</string>
    <string name="undo">UNDO</string>
    <string name="smob_floorplan">Shop Floor Plan</string>

    <string name="anchor_char">x</string>
    <string name="title_product">Product</string>
    <string name="title_shop">Store</string>
    <string name="dismiss">Dismiss</string>
    <string name="add_to_group">Add to Group</string>
    <string name="groups">Groups</string>
    <string name="lists">Lists</string>
    <string name="contacts">Contacts</string>
    <string name="import_contacts">Import Contacts</string>
    <string name="profile">Profile</string>
    <string name="floor_plan">Floor Plan</string>
    <string name="description">Description</string>
    <string name="admin_group_member_username">Username</string>
    <string name="admin_group_member_name">Name</string>
    <string name="admin_group_member_email">Email</string>
    <string name="adminDescription">ShopMob administration</string>
    <string name="adminGroupDescription">ShopMob group administration</string>
    <string name="adminGroupMemberDescription">ShopMob group member administration</string>
    <string name="adminListMemberDescription">ShopMob list member administration</string>
    <string name="adminListDescription">ShopMob shopping list administration</string>
    <string name="adminProfileDescription">ShopMob user profile administration</string>
    <string name="adminMemberDescription">ShopMob group member details</string>
    <string name="adminUserAvatar">ShopMob user avatar</string>
    <string name="location">Location</string>
    <string name="location_latlong">%1$.6f,%2$.6f</string>
    <string name="catMain">Category</string>
    <string name="catSub">Kind</string>
    <string name="actDate">Purchased</string>
    <string name="actReps">Repetitions</string>
    <string name="storeType">Type</string>
    <string name="storeCategory">Category</string>
    <string name="storeCatConv">%1$d</string>
    <string name="storeBusiness">Hours</string>
    <string name="storeBusinessTable">Mon: %1$s // Tue: %2$s\nWed: %3$s // Thur: %4$s\nFri: %5$s // Sat: %6$s\nSun: %7$s</string>
    <string name="map_user_prompt">Select location of the ShopMob Store.</string>
    <string name="error_add_smob_items">Add some ShopMob items first…</string>
    <string name="error_add_smob_users">Add some ShopMob users first…</string>
    <string name="error_add_smob_groups">Add some ShopMob groups first…</string>
    <string name="error_add_smob_lists">Add some ShopMob lists first…</string>
    <string name="location_accuracy_explanation"><![CDATA[ShopMob needs \'Improve Location Accuracy\' enabled. Go to settings \'Security & Location > Location > Mode\' to enable this.]]></string>
    <string name="static_shortcut_label_short">Active Shopping List</string>
    <string name="static_shortcut_label_long">This link takes you to the last active ShopMob shopping list.</string>
    <string name="static_shortcut_disabled_message">No active ShopMob shopping list found</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="coming_soon">… coming soon.</string>
    <string name="deepLinkMap">android-app://com.tanfra.shopmob.smob.ui.planning.shopEdit/map</string>
    <string name="message_subscribed">Successfully subscribed to topic \'ShopMob Update\'.</string>
    <string name="message_subscribe_failed">Failed to subscribe to topic \'ShopMob Update\'</string>
    <string name="notification_permissions_granted">Using energy saving FCM driven notifications to update Smob content.</string>
    <string name="notification_permissions_denied">Using battery consuming polling to update Smob content. </string>

</resources>
