<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/detail_motion"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".smob.ui.shopping.SmobShoppingActivity"
    tools:showIn="@layout/activity_shopping">

    <TextView
        android:id="@+id/tvShopHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_details_shop"
        android:textColor="@color/primaryDarkColor"
        android:layout_margin="@dimen/text_size_large"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvShopName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tvShopName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:padding="@dimen/margin_normal"
        android:text="@string/coming_soon"
        tools:text="da shop name"
        android:textColor="@color/primaryDarkColor"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintTop_toBottomOf="@id/tvShopHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <!-- the following views are constraint by the MotionLayout -->

    <ImageView
        android:id="@+id/ivCartSymbol"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_size_small"
        android:contentDescription="@string/icon_shopping_cart"
        android:src="@drawable/shopping_icon" />

    <ImageView
        android:id="@+id/ivShopPreview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_size_large"
        android:contentDescription="@string/shopping"
        android:src="@drawable/shopping" />

</androidx.constraintlayout.motion.widget.MotionLayout>
