<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.tanfra.shopmob.smob.ui.admin.AdminViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/secondaryLightColor">

            <ImageView
                android:id="@+id/ivSmobDetails"
                android:layout_width="0dp"
                android:layout_height="@dimen/image_header_height"
                android:layout_marginTop="@dimen/vertical_margin_image"
                android:layout_marginBottom="@dimen/vertical_margin_image"
                android:layout_marginStart="@dimen/horizontal_margin_small"
                android:layout_marginEnd="@dimen/horizontal_margin_small"
                android:contentDescription="@string/adminDescription"
                android:scaleType="fitCenter"
                android:src="@drawable/smob_1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/btProfile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                tools:src="@drawable/smob_1"
                />

            <Button
                android:id="@+id/btProfile"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin_small"
                android:layout_marginBottom="@dimen/vertical_margin_small"
                android:layout_marginStart="@dimen/horizontal_margin_small"
                android:paddingStart="@dimen/button_padding"
                android:paddingEnd="@dimen/button_padding"
                android:text="@string/profile"
                android:textColor="@color/swipeSecondaryLightColor"
                android:textSize="@dimen/button_text_size"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/ivSmobDetails"
                app:layout_constraintBottom_toTopOf="@id/btGroups"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <Button
                android:id="@+id/btGroups"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin_small"
                android:layout_marginBottom="@dimen/vertical_margin_small"
                android:layout_marginStart="@dimen/horizontal_margin_small"
                android:paddingStart="@dimen/button_padding"
                android:paddingEnd="@dimen/button_padding"
                android:text="@string/groups"
                android:textColor="@color/swipeSecondaryLightColor"
                android:textSize="@dimen/button_text_size"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/btProfile"
                app:layout_constraintBottom_toTopOf="@id/btLists"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <Button
                android:id="@+id/btLists"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin_small"
                android:layout_marginBottom="@dimen/vertical_margin_small"
                android:layout_marginStart="@dimen/horizontal_margin_small"
                android:paddingStart="@dimen/button_padding"
                android:paddingEnd="@dimen/button_padding"
                android:text="@string/lists"
                android:textColor="@color/swipeSecondaryLightColor"
                android:textSize="@dimen/button_text_size"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/btGroups"
                app:layout_constraintBottom_toTopOf="@id/btContacts"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <Button
                android:id="@+id/btContacts"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin_small"
                android:layout_marginBottom="@dimen/vertical_margin_large"
                android:layout_marginStart="@dimen/horizontal_margin_small"
                android:paddingStart="@dimen/button_padding"
                android:paddingEnd="@dimen/button_padding"
                android:text="@string/contacts"
                android:textColor="@color/swipeSecondaryLightColor"
                android:textSize="@dimen/button_text_size"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/btLists"
                app:layout_constraintBottom_toTopOf="@id/btDismiss"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <Button
                android:id="@+id/btDismiss"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin_small"
                android:layout_marginBottom="@dimen/vertical_margin_small"
                android:layout_marginStart="@dimen/horizontal_margin_small"
                android:paddingStart="@dimen/button_padding"
                android:paddingEnd="@dimen/button_padding"
                android:text="@string/dismiss"
                android:textColor="@color/swipePrimaryColor"
                android:textSize="@dimen/button_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btContacts"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>