<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.tanfra.shopmob.smob.ui.planning.PlanningViewModel" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.tanfra.shopmob.smob.ui.planning.lists.PlanningListsTableFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/smobItemsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:stateFlowResource="@{viewModel.smobLists}" />

            <TextView
                android:id="@+id/noGroupsHint1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin_huge"
                android:layout_marginBottom="@dimen/vertical_margin_large"
                android:layout_marginEnd="@dimen/horizontal_margin_huge"
                android:text="@string/no_group_1"
                android:textAlignment="textStart"
                android:textSize="@dimen/text_size_large"
                app:fadeVisible="@{viewModel.showNoData.booleanValue()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/noDataTextView" />

            <TextView
                android:id="@+id/noDataTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/no_data"
                android:textSize="@dimen/text_size_large"
                app:fadeVisible="@{viewModel.showNoData.booleanValue()}"
                app:drawableTopCompat="@drawable/ic_no_data"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/noGroupsHint2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin_huge"
                android:layout_marginTop="@dimen/vertical_margin_large"
                android:layout_marginEnd="@dimen/horizontal_margin_huge"
                android:text="@string/no_group_2"
                android:textAlignment="textStart"
                android:textSize="@dimen/text_size_large"
                app:fadeVisible="@{viewModel.showNoData.booleanValue()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/noDataTextView" />

            <!-- centered (red) progress bar, indicating the loading state when accessing the DB -->
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:fadeVisibleOnLoading="@{viewModel.smobLists}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_smob_item_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_normal"
                android:src="@drawable/ic_add"
                android:contentDescription="@string/add_smob_item"
                app:fabSize="normal"
                app:layout_anchor="@id/smobItemsRecyclerView"
                app:layout_anchorGravity="bottom|right|end"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/goShop"
                app:layout_constraintEnd_toStartOf="@id/defineShop"
                />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/defineShop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_normal"
                android:layout_marginBottom="269dp"
                android:contentDescription="@string/add_smob_shop"
                android:src="@drawable/ic_baseline_store_mall_directory_24"
                app:fabSize="normal"
                app:layout_anchor="@id/smobItemsRecyclerView"
                app:layout_anchorGravity="bottom|left|start"
                app:layout_constraintBottom_toBottomOf="@+id/smobItemsRecyclerView"
                app:layout_constraintStart_toEndOf="@id/add_smob_item_fab"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/goShop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_normal"
                android:layout_marginBottom="269dp"
                android:contentDescription="@string/add_smob_shop"
                android:src="@drawable/ic_baseline_shopping_cart_24"
                app:fabSize="normal"
                app:layout_anchor="@id/smobItemsRecyclerView"
                app:layout_anchorGravity="bottom|left|start"
                app:layout_constraintBottom_toBottomOf="@+id/smobItemsRecyclerView"
                app:layout_constraintEnd_toStartOf="@id/add_smob_item_fab"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</layout>